--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -352,11 +352,11 @@ em {
   font-weight: bold;
 }
 .adminmsay{
-  color: #84664a;
+  color: #65c22b;
   font-weight: bold;
 }
 .headminmsay{
-  color: #665442;
+  color: #90ee90;
   font-weight: bold;
 }
 .admin {
@@ -368,7 +368,7 @@ em {
   font-weight: bold;
 }
 .headminasay{
-  color: #5A0A7F;
+  color: #90ee90;
   font-weight: bold;
 }
 .boldannounce{
