--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -369,11 +369,11 @@ em {
   font-weight: bold;
 }
 .adminmsay {
-  color: #66411e;
+  color: #65c22b;
   font-weight: bold;
 }
 .headminmsay {
-  color: #402A14;
+  color: #90ee90;
   font-weight: bold;
 }
 .adminsay {
@@ -390,7 +390,7 @@ em {
   font-weight: bold;
 }
 .headminasay {
-  color: #5A0A7F;
+  color: #90ee90;
   font-weight: bold;
 }
 .boldannounce {
